# anlp-prompt-formatting

./: .env.example  .gitignore  README.md  evaluate_formats.py  format_explorer.py  formatters.py  generate_synonyms.py  prompt_template.py  reproduction.ipynb  requirements.txt  synonyms.ipynb  synonyms_functions.py  task_formatters.py  word_frequency.py
reformat/: README.md  pyproject.toml
reformat/reformat/: __init__.py  cli.py  improver.py  models.py  reformatter.py  rules.py  synonym_rules.py  templates.py
reformat/reformat/models/: gpt-4o-mini_synonym_rules.json  llama-3_1-8b-instant_synonym_rules.json  llama-3_3-70b-versatile_synonym_rules.json
reformat/tests/: formatter.py  improver.ipynb  improver.py  test_notebook.py
