[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reformat"
version = "0.1.0"
description = "A package for intelligent prompt reformatting using expert rules"
readme = "README.md"
authors = [
    { name = "Tobias Leibrock", email = "mail.tobias.leibrock@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = ["typing", "dataclasses"]

[project.urls]
Homepage = "https://github.com/tobiasleibrock/anlp-prompt-formatting"
Repository = "https://github.com/tobiasleibrock/anlp-prompt-formatting.git"

[project.scripts]
reformat = "reformat.cli:main"

[tool.setuptools]
packages = ["reformat"]
